--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -31,7 +31,7 @@
   .bucketsubtitle { font-size:18px; margin-left:15px; margin-bottom:20px;}
   .arenabucket .bucketsubtitle p { font-size: 15px; }
   .bucketsubtitle p { font-weight:bold; }
-  .bucketsubtitle ul { margin:0 0 15px 50px; }
+  .bucketsubtitle ul { margin:0 0 15px 50px; font-size:15px; }
   .bucketsubtitle li { margin-bottom: 5px; }
   .taskbox{ margin-left:40px; margin-bottom:25px; border: 1px solid rgba(0, 0, 0, .1); border-top-left-radius: 0;border-top-right-radius: 0;overflow-y: auto;background-color: transparent;background-image: -moz-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -ms-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -o-linear-gradient(top,rgba(0, 0, 0, .06),transparent);background-image: -webkit-gradient(linear, 0 0, 0 100%, from(rgba(0, 0, 0, .06)), to(transparent));background-image: -webkit-linear-gradient(top,rgba(0, 0, 0, 0.1),transparent);background-image: linear-gradient(top,rgba(0, 0, 0, .06),transparent);border-bottom-right-radius: 6px; border-bottom-left-radius:6px; padding:5px 12px 17px 12px; width: 89%;}
   .taskbox h3{ text-shadow: 1px 0 0 #fff; }
