--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -12,12 +12,11 @@
           %h3 What is the name of your Challenge?
           %div.control-group
             %div.controls
-              = f.text_field :name, autofocus: "autofocus", style: "padding: 8px; width: 250px;", placeholder: "Something awesome..."
+              = f.text_field :name, autofocus: "autofocus", style: "padding: 20px; width: 500px; font-size: 28px; line-height: 36px; text-align: center;", placeholder: "Something awesome..."
           %div.tips
-            
             %h5
               %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-              Use to goldilocks rule for names: "Mathematics" would be too broad, "Subtraction" too narrow, but "Pre-Algebra" would be just right.
+              Use to goldilocks rule for names: "Mathematics" would be too broad, "Order of Operations" too narrow, but "Algebra" would be just right.
         
         %div.action_group
           %h3 Upload an image to represent your Challenge
@@ -29,32 +28,38 @@
               %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
               Images of medium resolution that's roughly a square with a color backgrounds tend to work best.
         
-        %div.action_group   
+        %div.action_group 
           %h3 Choose a Challenge template
           %div.field.clearfix
             %div.form_field
-              %img.template_image{ src: STONY_SMALL_URL }
-              %img.template_image{ src: STONY_SMALL_URL }
-              %img.template_image{ src: STONY_SMALL_URL }
-              %img.template_image{ src: STONY_SMALL_URL }
-              %img.template_image{ src: STONY_SMALL_URL }
+              %label.checkbox
+                = f.radio_button(:template_type, "difficulty", style: "margin-top: -2px;" )
+                Organize Sections difficulty level (Novice, Intermediate, Advanced, Master)
+              %label.checkbox
+                = f.radio_button(:template_type, "subtopic", style: "margin-top: -2px;" )
+                Organize Sections by subtopic name
+              %label.checkbox
+                = f.radio_button(:template_type, "blank", style: "margin-top: -2px;" ) 
+                Blank template
           %div.tips
             %h5 
               %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-              Images of medium resolution that's roughly a square with a color backgrounds tend to work best.
+              You can always add, remove or rename any section before you publish your Challenge.
     
-    %div.row{ style: "text-align: center;" }
+    %div.row{ style: "text-align: center; margin-bottom: 30px;" }
       %button.button.button-large.button-actionable{ onclick: "$('#new_path').submit();" } Create My Challenge
       
 :css
+  h3 { font-size: 28px; }
   .action_group { margin-bottom: 40px; }
   .action_group h3 { margin: 0 0 15px 0; }
   .tips { width: 400px; margin: 5px auto; }
   .tips h5 { display: inline-block; width: 350px; }
   .tips img { vertical-align: top;display: inline-block; height: 13px; width: 13px; }
   .template_image { width: 60px; height: 60px; }
-  .button.button-large { font-size: 18px; line-height: 30px; }
-
+  .button.button-large { font-size: 24px; line-height: 30px; font-weight: lighter; }
+  .button.button-large:hover { box-shadow: 0px 0px 5px black; }
+  .action_group .image_preview { width: 200px; height: 200px; max-width: 200px; }
 :javascript
   $(function(){
     $("#new_path").submit(function(){
