--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -34,7 +34,7 @@
             %div.form_field
               %label.checkbox
                 = f.radio_button(:template_type, "difficulty", style: "margin-top: -2px;" )
-                Organize Sections by difficulty level (Novice, Intermediate, Advanced, Master)
+                Organize Sections by difficulty level
               %label.checkbox
                 = f.radio_button(:template_type, "subtopic", style: "margin-top: -2px;" )
                 Organize Sections by subtopic name
