--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -47,19 +47,7 @@
               You can always add, remove or rename any Section before you publish your Challenge.
     
     %div.row{ style: "margin-bottom: 30px; margin-right:auto; margin-left:auto; " }
-      %button.button.button-large.button-actionable{ onclick: "$('#new_path').submit();" } Create My Challenge
-      
-:css
-  h3 { font-size: 28px; }
-  .action_group { margin-bottom: 40px; }
-  .action_group h3 { margin: 0 0 15px 0; }
-  .tips { width: 400px; margin: 5px auto; }
-  .tips h5 { display: inline-block; width: 370px; }
-  .tips img { position:relative; bottom:2px; display: inline-block; height: 18px; width: 18px; }
-  .template_image { width: 60px; height: 60px; }
-  .button.button-large { font-size: 24px; line-height: 30px; font-weight: lighter; }
-  .button.button-large:hover { box-shadow: 0px 0px 5px black; }
-  .action_group .image_preview { width: 200px; height: 200px; max-width: 200px; }
+      %button.button.button-xlarge.button-actionable{ onclick: "$('#new_path').submit();" } Create My Challenge
   
 :javascript
   $(function(){
