--- a/app/views/paths/new.html.haml
+++ b/app/views/paths/new.html.haml
@@ -16,7 +16,7 @@
           %div.tips
             %h5
               %img{ alt: "Lightbulb", src: LIGHT_BULB_URL }
-              Stick to the Goldilocks rule for names: "Mathematics" would be too broad, "Order of Operations" too narrow, but "Algebra" would be just right.
+              Stick to the Goldilocks rule for names: "Mathematics" is too broad, "Order of Operations" too narrow, but "Algebra" would be just right.
         
         %div.action_group
           %h3 Upload an image to represent your Challenge
