--- a/app/assets/stylesheets/z_bootstrap-overrides.css
+++ b/app/assets/stylesheets/z_bootstrap-overrides.css
@@ -35,12 +35,12 @@
   background-image: linear-gradient(top, #406B9B, #263042);
 }
 
+/* Navbar/Z_boostrap-overrides */
 .navbar { height: 40px; position: fixed; top: 0; left: 0; right: 0; z-index: 100; }
-.chunk.cloudy { display:inline-block; width:30px; height:44px; background-color:rgba(255, 255, 255, .15); margin-right:28px;z-index: 1;}
+.chunk.cloudy { display:inline-block; width:2%; height:100%; background-color:rgba(255, 255, 255, .15); z-index: 1;}
 .navbar h3 a, .navbar .brand { float: left;display: block; padding: 0; margin:0; line-height: 1; text-decoration: none;font: normal 18px arial, sans-serif;}
-.container h3 { left:68px;}
-nav img { width:150px; max-width:none;}
-.navicons img { width:25px; display:inline; margin:2px 25px 25px; cursor: pointer; }
+.container h3 { left:68px; }
+.navicons img { width:25px; }
 .navitem { border-right: 1px solid #020D25; border-left: 1px solid #56698B;}
 .navitem a { opacity:.8}
 .navitem a:hover { opacity: 1; position:relative; bottom:1px; background-color: rgba(255, 255, 255, .1); }
