--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -14,29 +14,26 @@
   .navbar{ z-index:1010; }
   
 %nav.navbar.navbar-fixed-top
-  %div.fill.navbar-inner
-    %div{ style: "position:absolute; height: 40px; overflow-y: hidden;" }
-      - 6.times do
-        %div.chunk.cloudy
-    %div{ style: "margin-left: 188px;" }
-      %h3.brand{ style: "top:3px; position:relative;" }
-        = link_to root_url, style: "font-size: 26px;" do
-          = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", style: "position:absolute;", alt: "MetaBright")
+  %div.fill.navbar-inner{ style: "height: 100%;" }
+    %div{ style: "margin-left: 3%; height: 100%;" }
+      %div.brand{ style: "padding-top: 3px; width: 150px;" }
+        = link_to root_url do
+          = image_tag("https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+nav+bar.png", alt: "MetaBright")
       - if current_user && show_nav_bar
-        %ul.nav.navicons{ style: "margin-left:153px; bottom:5px; border-right:1px solid #56698B; height: 45px; overflow-y: hidden;" }
-          %li.navitem{ style: "border-left: 0px;", title: "Home" }
+        %ul.nav.navicons{ style: "height: 100%; margin-left: 10px;border-left: 1px solid #020D25; border-right: 1px solid #56698B;" }
+          %li.navitem{ title: "Home", style: "height: 100%; border-left: 1px solid #56698B;" }
             = link_to root_url do
-              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/home.png", style: "width:26px;", alt: "Home"
-          %li.navitem{ title: "Explore"}
+              = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/home.png",  alt: "Home"
+          %li.navitem{ title: "Explore", style: "height: 100%;" }
             = link_to "#", class: "explore_link" do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/explore+signpost.png", style: "width:22px;", alt: "Explore"
-          %li.navitem{ title: "Profile"}
+          %li.navitem{ title: "Profile", style: "height: 100%;" }
             = link_to profile_path(current_user.username) do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/profile.png", alt: "Profile"
-          %li.navitem{ title: "Create"}
+          %li.navitem{ title: "Create", style: "height: 100%;" }
             = link_to create_path do
               = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/create.png", style: "width:22px;", alt: "Create"
-        %ul.nav.pull-right{ style: "float:right; margin-right: 197px; " }
+        %ul.nav.pull-right{ style: "float:right; margin-right: 8%; " }
           - if current_user
             %li.navuser
               %div.dropdown.pull-right
