scrolling on profile

--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -32,7 +32,7 @@
   .challengebucket {margin: 15px 0 0 60px; padding: 12px;}
   .challengebucket img { height:60px; width:60px; display:inline-block; border-radius:6px;}
   .challengebucket h2 { color: rgb(196, 196, 196); text-shadow: 1px 0 0 #fff; font-weight:bold; font-size:35px; }
-  .profilecontent { background-color: #f9f9f9; padding: 12px; border: 1px solid rgba(0,0,0,0.1); }
+  .profilecontent { background-color: #f9f9f9; border: 1px solid rgba(0,0,0,0.1); }
   .bucketsubtitle { font-size:18px; margin-left:15px; margin-bottom:20px;}
   .arenabucket .bucketsubtitle p { font-size: 15px; }
   .bucketsubtitle p { font-weight:bold; }
@@ -44,6 +44,8 @@
   .taskbucket a { cursor: pointer; }
   .taskboxheader { padding:0 20px; border: 1px solid rgba(0, 0, 0, .1);margin-left: 40px;border-top-left-radius: 6px;width: 87%;background-color: rgb(66, 66, 66);color: white;border-top-right-radius: 6px;border-bottom: transparent;}
   .taskboxheader h3 { font-size:20px; }
+  #profile .postspace img { height:20px; width:20px; }
+  #profile .postphotospace img { height:50px; width:50px; }
   
 %div#profile
   %div#topsection
@@ -94,13 +96,101 @@
                           %li Another achievement here
                 %div.taskbucket
                   %h2 What I've done...
+                  %h4{ style: "font-weight:bold; margin-bottom:6px;" } 18 Tasks Completed
                   %div.profilecontent
-                    %div{ style: " background-color:white; border:1px solid rgba(0,0,0,.1); width:400px; min-height:100px; margin-right:auto; margin-left:auto; " }
-                      %div{ style: "margin-top: 10px; background-color: rgb(229, 242, 245); padding: 9px 12px; text-shadow:none; font-size:13px;" }
-                        Here is an awesome Creative Response question. Good luck answering it because it is so tricky. Actually its a Task.
-                      %div{ style: " " }
-                        %img{ src: "http://www.placekitten.com/300/300", style: " height:200px; width:200px; "}
-                      %div{ style: " " }
+                    .post
+                      .postphotospace
+                        %a{:href => "/nathanielsokollward"}
+                          %img.photo{:alt => "Photo", :src => "https://lh5.googleusercontent.com/-3ms2Fcl-wBI/AAAAAAAAAAI/AAAAAAAAIfk/EGQexs3Mcf4/photo.jpg"}/
+                      .postspace{:style => "\r\n    width: 450px;\r\n"}
+                        .postheader
+                          %h3
+                            %a.username{:href => "/nathanielsokollward"} Nathaniel Sokoll-Ward
+                          %span{:style => ""}
+                            %a.challengename{:href => "/challenges/rubyrailstesting"} Ruby / Rails testing
+                          .votingandpointsarea
+                            %span.vote_points{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px;"} 150
+                            %span{:style => "font-weight: bold;color: #404040;font-size: 16px;position: relative; top:3px; margin-right:5px;"} pts
+                            .dropdown.submission-icon{:style => "padding-top:0px; margin: 0px;"}
+                              %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :style => "padding:0px;"}
+                                %span.caret{:style => "margin: 6px 0 0 0;"}
+                              %ul.dropdown-menu{:role => "button", :style => "margin: 0; padding: 0; top:26px; left: -71px; min-width: 140px;"}
+                                %li{:style => "margin-left: -10px;"}
+                                  .graynub{:style => "top:-17px; left: 75px; margin:0; "}
+                                  %div{:style => "padding: 3px 0px; margin:0;"}
+                                    %ul.profile_dropdown{:style => "list-style: none; margin: 0px; padding: 0; min-width: 120px;"}
+                                      %li
+                                        %a.retract_link{"data-confirm" => "Are you sure you want to delete your submission?", "data-remote" => "true", :href => "/retract/8086", :style => "padding: 0; color: inherit; text-shadow: none; padding-left: 8px; margin-left: -8px; margin-bottom: 2px;"} Delete Submission
+                        .posttext.leveltext.dropdown
+                          %pre.dropdown-toggle{"data-toggle" => "dropdown", :href => "#", :role => "button", :style => "color:inherit; cursor:default;"} Why do you think testing your software may be important?
+                          %ul.dropdown-menu{:role => "menu", :style => "left:99.5%; top:-70%; min-width:152px;"}
+                            %li
+                              %div
+                                .sidenub
+                              %div{:style => "padding: 3px 0px;"}
+                                %ul.profile_dropdown{:style => "list-style: none; margin: 0 2px 0 4px;"}
+                                  %li.CR_dropdown_option{:style => "display:none;"}
+                                    %a{:href => "/sections/97/take/494"} Answer this question
+                                  %li.CR_dropdown_option
+                                    %a{:href => "/tasks/494/view"} View all responses
+                                  %li.CR_dropdown_option
+                                    %a{:href => "/submissions/683/view"} View all comments
+                        #cr_pop.CRarea
+                          %pre{:style => "margin:20px; word-break:normal;"}
+                            It's smart business. Nobody likes losing time or money because of a bug. The classic (albeit hyperbolic) example here is the failure of the Ariane 5 rocket.
+                            
+                            "Ariane 5's first test flight (Ariane 5 Flight 501) on 4 June 1996 failed, with the rocket self-destructing 37 seconds after launch because of a malfunction in the control software. A data conversion from 64-bit floating point value to 16-bit signed integer value to be stored in a variable representing horizontal bias caused a processor trap (operand error) because the floating point value was too large to be represented by a 16-bit signed integer."
+                            %a{:href => "http://en.wikipedia.org/wiki/Ariane_5#Notable_launches", :target => "_blank"} http://en.wikipedia.org/wiki/Ariane_5#Notable_launches
+                        .postfooter
+                          .leftstuff
+                            .displayin.floatl
+                              %a.comment{:onclick => "open_comments(this);", :style => "position: relative; top: 5px;"} 3 Comments
+                            .addthis_toolbox.social_toolbar{"addthis:title" => "Great response in the Ruby / Rails testing Challenge on @MetaBright.", "addthis:url" => "http://www.metabright.com/paths/rubyrailstesting/submission/683", :style => "display: inline; margin-right: 10px; float: right;"}
+                              %a{:href => "#", :onclick => "javascript:void window.open('https://www.facebook.com/sharer/sharer.php?u=http://www.metabright.com/paths/rubyrailstesting/submission/683','sharing','width=550,height=300,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;"}
+                                %img{:alt => "Share on Facebook", :src => "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Facebook+small.png"}/
+                              %a{:href => "#", :onclick => "javascript:void window.open('https://twitter.com/intent/tweet?text=Great response in the Ruby / Rails testing Challenge on @MetaBright.&url=http://www.metabright.com/paths/rubyrailstesting/submission/683&related=','sharing','width=550,height=300,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;"}
+                                %img{:alt => "Share on Twitter", :src => "https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png"}/
+                              %a{:href => "#", :onclick => "javascript:void window.open('https://plus.google.com/share?url=http://www.metabright.com/paths/rubyrailstesting/submission/683&t=Great response in the Ruby / Rails testing Challenge on @MetaBright.','sharing','width=550,height=300,toolbar=0,menubar=0,location=0,status=0,scrollbars=0,resizable=1,left=0,top=0');return false;"}
+                                %img{:alt => "Share on Google+", :src => "https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png"}/
+                          .comments{:style => "text-align: left; display: none;"}
+                            %ul{:style => "list-style: none; margin: 10px 0 20px 0;"}
+                              %li
+                                %div{:style => "float:left;"}
+                                  %a{:href => "/nathanielsokollward"}
+                                    %img.commentphoto{:alt => "Photo", :src => "https://lh5.googleusercontent.com/-3ms2Fcl-wBI/AAAAAAAAAAI/AAAAAAAAIfk/EGQexs3Mcf4/photo.jpg"}/
+                                %div{:style => "overflow:hidden; margin: 0 0 0 43px;"}
+                                  %pre.unstyled.text_content{:style => "font-size: 13px; color: black; margin-left: 0;"} The lesson here is obvious: test your software, or get ready to lose $7 billion
+                                  %p{:style => "margin-left: 0;"}
+                                    %a{:href => "/nathanielsokollward"} Nathaniel Sokoll-Ward
+                                    about 9 days ago.
+                                    %a.comment_delete{"data-method" => "delete", "data-remote" => "true", :href => "/comments/204", :rel => "nofollow"} Remove.
+                              %li
+                                %div{:style => "float:left;"}
+                                  %a{:href => "/joelpearson"}
+                                    %img.commentphoto{:alt => "F001c1cf1c39f6e0c44f25676b93ce968cb0e293_full", :src => "http://media.steampowered.com/steamcommunity/public/images/avatars/f0/f001c1cf1c39f6e0c44f25676b93ce968cb0e293_full.jpg"}/
+                                %div{:style => "overflow:hidden; margin: 0 0 0 43px;"}
+                                  %pre.unstyled.text_content{:style => "font-size: 13px; color: black; margin-left: 0;"} + for citing references :)
+                                  %p{:style => "margin-left: 0;"}
+                                    %a{:href => "/joelpearson"} Joel Pearson
+                                    about 8 days ago.
+                              %li
+                                %div{:style => "float:left;"}
+                                  %a{:href => "/jonathankirst4"}
+                                    %img.commentphoto{:alt => "Photo", :src => "https://lh3.googleusercontent.com/-biyqY3RVSnQ/AAAAAAAAAAI/AAAAAAAAAAA/JoQ9BiBg0kE/photo.jpg"}/
+                                %div{:style => "overflow:hidden; margin: 0 0 0 43px;"}
+                                  %pre.unstyled.text_content{:style => "font-size: 13px; color: black; margin-left: 0;"} Totally. New feature idea....
+                                  %p{:style => "margin-left: 0;"}
+                                    %a{:href => "/jonathankirst4"} Jonathan Kirst
+                                    about 8 days ago.
+                            %form#new_comment.new_comment{"accept-charset" => "UTF-8", :action => "/comments", "data-remote" => "true", :method => "post"}
+                              %div{:style => "margin:0;padding:0;display:inline"}
+                                %input{:name => "utf8", :type => "hidden", :value => "✓"}/
+                                %input{:name => "authenticity_token", :type => "hidden", :value => "weJUF/4iOHFMISu/oL/ae4dV3Y3HFc+cbXm9p9ExuMs="}/
+                              %div{:style => "width: 100%"}
+                                %textarea#comment_content{:cols => "40", :name => "comment[content]", :rows => "2", :style => "width: 510px; height: 55px; "}
+                              %input#comment_owner_type{:name => "comment[owner_type]", :type => "hidden", :value => "SubmittedAnswer"}/
+                              %input#comment_owner_id{:name => "comment[owner_id]", :type => "hidden", :value => "683"}/
+                              %input.button.button-standard.button-small{:name => "commit", :style => "margin-top:15px;", :type => "submit", :value => "Add Comment"}/
                         
                     %center
                       %a See more
@@ -115,7 +205,7 @@
                       %pre{ style: "margin:20px; word-break:normal;" } kljf sadkljashd jfkahsfh askjf hjfasjfh sda fajfh afaljksfh jasj fkjf k
                     %center
                       %a See more
-    %div.span3
+    %div#profilerail.span3
       %div.leftbox
         %div.leftboxheader Jump to...
         %div.leftboxfooter
@@ -124,13 +214,10 @@
             %img.leftrailicon{ src: "http://www.placekitten.com/61/60" }
             %img.leftrailicon{ src: "http://www.placekitten.com/62/60" }
             %img.leftrailicon{ src: "http://www.placekitten.com/63/60" }
-    %div.span3
       %div.leftbox
         %div.leftboxheader Connect
         %div.leftboxfooter
-            
-  
-  
+          
   %div.row{ style: "display:none;"}
     %div.span5
       %div.leftbox{}
@@ -220,3 +307,10 @@
                 - @creative_task_questions.each do |task|
                   %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), user_path(@user, task: task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
         = render "shared/newsfeed"
+        
+
+:javascript
+  $(function() {
+     $("#profilerail").jScroll({
+     });
+});
